--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,31 @@
+# Backend Environment Variables
+
+# App
+PORT=5000
+NODE_ENV=development
+PUBLIC_BASE_URL=http://localhost:5000
+CORS_ORIGIN=http://localhost:3000,http://localhost:5173
+
+# Admin Auth
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=change-this-password
+JWT_SECRET=change-this-secret
+
+# Supabase (Service role for server-side operations)
+SUPABASE_URL=https://YOUR_PROJECT_REF.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.YOUR_SERVICE_ROLE_KEY
+
+# SMTP (optional for contact notifications)
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=postmaster@example.com
+SMTP_PASS=your-smtp-password
+SMTP_FROM="Portfolio <no-reply@example.com>"
+
+# Cloudinary (optional)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
 # Environment Variables
 SUPABASE_URL=your_supabase_url_here
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
