--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Backend API for Ganpat Singh's Portfolio",
   "main": "server.js",
   "scripts": {
+  "render-build": "npm install --include=dev && npm run build",
     "start": "node dist/server.js",
     "dev": "ts-node-dev src/server.ts",
     "build": "tsc",
