Fix Vercel deployment failures - Add pre-build verification script - Update Next.js config with fallback backend URL - Add BACKEND_URL to vercel.json - Improve error handling for missing environment variables

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:vercel",
   "outputDirectory": ".next",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "rootDirectory": "frontend"
+  "rootDirectory": "frontend",
+  "env": {
+    "BACKEND_URL": "https://portfolio-web-gsr.onrender.com"
+  }
 }
