--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
     "@supabase/supabase-js": "^2.56.1",
+    "@tanstack/react-query": "^5.90.20",
     "@types/three": "^0.179.0",
     "aos": "^2.3.4",
     "framer-motion": "^12.23.12",
@@ -21,11 +21,9 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0",
-    "three": "^0.179.1",
-    "vanta": "^0.5.24"
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
